Fixed LINT warnings.